       Canon PIXMA iP1800 (EXPERIMENTAL)
       Canon PIXMA iP1900 (EXPERIMENTAL)
       Canon PIXMA iP2000 (EXPERIMENTAL)
       Canon PIXMA iP2200 (EXPERIMENTAL)
       Canon PIXMA iP2500 (EXPERIMENTAL)
       Canon PIXMA iP2600 (EXPERIMENTAL)
       Canon PIXMA iP2700
       Canon PIXMA iP3100 (EXPERIMENTAL)
       Canon PIXMA iP4700
       Canon PIXMA iP4800 (EXPERIMENTAL)
       Canon PIXMA iX6500 (EXPERIMENTAL)
       Canon PIXMA iX7000 (EXPERIMENTAL)
       Canon PIXMA MG5100
       Canon PIXMA MG5200
       Canon PIXMA MG6100
       Canon PIXMA MG8100
       Canon PIXMA MP250
       Canon PIXMA MP270
       Canon PIXMA MP280
       Canon PIXMA MP450
       Canon PIXMA MP460
       Canon PIXMA MP480
       Canon PIXMA MP493 (EXPERIMENTAL)
       Canon PIXMA MP495
       Canon PIXMA MP520
       Canon PIXMA MP540
       Canon PIXMA MP550
       Canon PIXMA MP600
       Canon PIXMA MP800 (EXPERIMENTAL)
       Canon PIXMA MP810 (EXPERIMENTAL)
       Canon PIXMA MP950
       Canon PIXMA MP960
       Canon PIXMA MP990
       Canon PIXMA MX300 (EXPERIMENTAL)
       Canon PIXMA MX310 (EXPERIMENTAL)
       Canon PIXMA MX330 (EXPERIMENTAL)
       Canon PIXMA MX340 (EXPERIMENTAL)
       Canon PIXMA MX350 (EXPERIMENTAL)
       Canon PIXMA MX360 (EXPERIMENTAL)
       Canon PIXMA MX410 (EXPERIMENTAL)
       Canon PIXMA MX420 (EXPERIMENTAL)
       Canon PIXMA MX700 (EXPERIMENTAL)
       Canon PIXMA MX850 (EXPERIMENTAL)
       Canon PIXMA MX860 (EXPERIMENTAL)
       Canon PIXMA MX870 (EXPERIMENTAL)
       Canon PIXMA MX880 (EXPERIMENTAL)
       Canon PIXMA MX7600 (EXPERIMENTAL)
       Canon PIXMA Pro9000 (EXPERIMENTAL)
       Canon PIXMA Pro9000 Mk.II (EXPERIMENTAL)
       Canon PIXMA Pro9500 (EXPERIMENTAL)
       Canon PIXMA Pro9500 Mk.II (EXPERIMENTAL)

     - Epson inkjet printers:

       EPSON B-310
       EPSON B-310N
       EPSON B-510DN
       EPSON ME Office 600F
       EPSON ME Office 620F
       Epson Stylus Photo R3000 (EXPERIMENTAL)